<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E3F2FD">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/Krishi_labh"
        android:textColor="@android:color/black"
        android:textSize="40dp"
        android:layout_marginTop="15dp"
        android:textStyle="bold"/>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        app:cardCornerRadius="5dp"
        android:elevation="10dp"
        android:layout_margin="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#2196F3"
            android:orientation="vertical"
            android:padding="5dp"

            android:layout_margin="7dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="LOGIN"
                android:gravity="center"
                android:textSize="30dp"
                android:layout_marginTop="15dp"
                android:textStyle="bold"
                android:textColor="@android:color/white"
                />
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp">

                <AutoCompleteTextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:background="@drawable/searchbarbackground"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"

                    android:singleLine="true"
                    android:textColor="@android:color/white"
                    android:padding="10dp"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:background="@drawable/searchbarbackground"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:padding="10dp"
                    android:textColor="@android:color/white"/>

            </android.support.design.widget.TextInputLayout>
            <TextView
                android:id="@+id/input_Sign_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/round_button"
                android:elevation="5dp"
                android:gravity="center"
                android:padding="10dp"
                android:text="SIGN IN"
                android:textSize="20dp" />


        </LinearLayout>

    </android.support.v7.widget.CardView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="15dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="If new User"
            android:textColor="@android:color/black"
            android:textStyle="italic"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="17dp"/>
        <TextView
            android:id="@+id/initial_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/round_button"
            android:elevation="5dp"
            android:gravity="center"
            android:padding="10dp"
            android:text="SIGN UP"
            android:onClick="SIGN_UP"
            android:textSize="20dp" />

    </LinearLayout>
</RelativeLayout>