<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#1E88E5"
        android:orientation="vertical"
        android:padding="10dp"
        android:elevation="5dp"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:animateLayoutChanges="true"
            android:elevation="10dp"
            android:padding="1dp">

            <ImageButton
                android:id="@+id/menu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:background="@drawable/ic_action_name"
                 />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:text="@string/Krishi_labh"
                android:textColor="@android:color/white"
                android:textSize="25dp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true">


                <ImageButton
                    android:id="@+id/notification"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/ic_notification"
                     />

                <ImageButton
                    android:id="@+id/search"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_search"
                     />
            </LinearLayout>
        </RelativeLayout>

    </LinearLayout>


    <android.support.v4.widget.DrawerLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/drawer"
        >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/frame_lay">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#1E88E5"

        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/upper_boundary"
            android:elevation="10dp"
            android:layout_marginTop="10dp"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:drawableLeft="@drawable/ic_store"
                android:text="@string/storeName"
                android:textStyle="bold"
                android:id="@+id/store_name"
                android:textColor="@android:color/white"
                android:textSize="20dp" />


        </RelativeLayout>

        <TextView
            android:id="@+id/location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:layout_marginBottom="70dp"
            android:drawableLeft="@drawable/ic_location"
            android:gravity="center"
            android:text="@string/locationMain"
            android:textSize="15dp"
            android:textColor="@android:color/white"
            />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="-50dp"
        android:elevation="10dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:elevation="10dp"

            android:weightSum="2">

            <android.support.v7.widget.CardView
                android:id="@+id/card_view_update"
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp"
                android:layout_weight="1"
                android:elevation="10dp"
                android:onClick="UpdateDemand"
                card_view:cardCornerRadius="4dp"
                card_view:cardElevation="10dp"
                card_view:contentPadding="5dp"

                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:weightSum="3">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="2"
                        android:scaleType="fitXY"
                        android:src="@drawable/food1" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:background="#f44336"
                        android:elevation="10dp"
                        android:gravity="center"
                        android:text="@string/updateDemand"
                        android:textColor="@android:color/white"
                        android:textSize="15dp"
                        android:textStyle="bold" />


                </LinearLayout>


            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="150dp"
            android:id="@+id/card_view_dashboard"
            android:layout_gravity="center"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"
            android:onClick="Dashboard"
            card_view:cardElevation="10dp"
            android:elevation="10dp"
            card_view:cardCornerRadius="4dp"
            card_view:contentPadding="5dp"

            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:weightSum="3"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2"
                    android:src="@drawable/dashboard"
                    android:scaleType="fitXY"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:text="@string/dashboard"
                    android:background="#0097a7"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"
                    android:textSize="15dp"
                    android:elevation="20dp"/>


            </LinearLayout>



        </android.support.v7.widget.CardView>
        </LinearLayout>
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:id="@+id/fpi_nearby"
            android:layout_gravity="center"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"
            android:layout_marginTop="15dp"
            card_view:cardElevation="10dp"
            android:elevation="10dp"
            card_view:cardCornerRadius="4dp"
            card_view:contentPadding="5dp"
            android:onClick="FPInearby"

            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:weightSum="3"
                android:orientation="vertical"
                >
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2"
                    android:src="@drawable/fpi"
                    android:scaleType="fitXY"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:text="@string/fpiNearby"
                    android:textStyle="bold"
                    android:background="#afb42b"
                    android:textColor="@android:color/white"
                    android:textSize="17dp"
                    />


            </LinearLayout>



        </android.support.v7.widget.CardView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="15dp"
            android:paddingBottom="10dp"
            android:elevation="20dp"
            android:weightSum="2">
            <android.support.v7.widget.CardView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="150dp"
                android:id="@+id/card_view_payment"
                android:layout_gravity="center"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp"
                card_view:cardElevation="10dp"
                android:elevation="10dp"
                card_view:cardCornerRadius="4dp"
                card_view:contentPadding="5dp"
                android:onClick="Payment"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:weightSum="3"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="2"
                        android:src="@drawable/payment"
                        android:scaleType="fitXY"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:layout_gravity="center"
                        android:text="@string/Payment"
                        android:background="#f44336"
                        android:textColor="@android:color/white"
                        android:textSize="15dp"
                        android:textStyle="bold"
                        android:elevation="10dp"
                        />


                </LinearLayout>



            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="150dp"
                android:id="@+id/purchaseHistory"
                android:layout_gravity="center"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp"
                android:onClick="PurchaseHistory"
                card_view:cardElevation="10dp"
                android:elevation="10dp"
                card_view:cardCornerRadius="4dp"
                card_view:contentPadding="5dp"

                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:weightSum="3"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="2"
                        android:src="@drawable/purchase"
                        android:scaleType="fitXY"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:layout_gravity="center"
                        android:text="@string/Purchase_History"
                        android:background="#0097a7"
                        android:textColor="@android:color/white"
                        android:textStyle="bold"
                        android:textSize="15dp"
                        android:elevation="20dp"/>


                </LinearLayout>



            </android.support.v7.widget.CardView>
        </LinearLayout>

    </LinearLayout>
    </LinearLayout>
    </ScrollView>
        </LinearLayout>
    </FrameLayout>
        <include
            android:layout_width="300dp"
            android:layout_height="match_parent"
            layout="@layout/drawer_menu_layout"
            android:layout_gravity="left"
            android:id="@+id/Menu_view"/>
    </android.support.v4.widget.DrawerLayout>
</LinearLayout>
