<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="com.example.atul.smartindiahackathon.FPI.LoginActivity">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />


        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardCornerRadius="4dp"
            android:elevation="10dp"
            android:layout_margin="10dp"
            android:id="@+id/login_form"
            >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/holo_blue_light">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_action_arrowback"
                        android:layout_gravity="center"
                        android:layout_marginStart="20dp"
                        android:id="@+id/back_arrow"/>
                    <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="REGISTRATION"
                    android:gravity="center"
                    android:layout_margin="15dp"
                        android:textColor="@android:color/white"
                    android:textSize="30dp"
                    android:textStyle="bold"
                    android:fontFamily="serif-monospace"/>
                </LinearLayout>

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="12dp"
            android:layout_alignParentBottom="true"

            >

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <AutoCompleteTextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:background="@drawable/searchbarbackground"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:padding="10dp"

                    android:singleLine="true"
                    android:textColor="@android:color/black"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:background="@drawable/searchbarbackground"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"

                    android:padding="10dp"
                    android:singleLine="true"
                    android:textColor="@android:color/black"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <EditText
                    android:id="@+id/phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/searchbarbackground"

                    android:hint="Phone "
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="phone"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:padding="10dp"
                    android:textColor="@android:color/black" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <EditText
                    android:id="@+id/Licence"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Licence No."
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textCapCharacters"
                    android:padding="10dp"

                    android:maxLines="1"
                    android:background="@drawable/searchbarbackground"
                    android:singleLine="true"
                    android:textColor="@android:color/black"/>

            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                >

                <EditText
                    android:id="@+id/company"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Company name"
                    android:background="@drawable/searchbarbackground"
                    android:padding="10dp"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textCapCharacters"
                    android:maxLines="1"
                    android:singleLine="true"

                    android:textColor="@android:color/black"/>

            </android.support.design.widget.TextInputLayout>
            <fragment
                android:id="@+id/place_autocomplete_fragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:name="com.google.android.gms.location.places.ui.PlaceAutocompleteFragment"
                android:padding="5dp"
                />

            <Button
                android:id="@+id/email_sign_in_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/action_sign_in"
                android:textStyle="bold"
                android:background="@android:color/holo_red_light"/>

        </LinearLayout>
            </RelativeLayout>
        </android.support.v7.widget.CardView>
</RelativeLayout>